# alaska2-steganalysis

./: .dockerignore  .gitignore  ANN_Projekt_Rino_Albertin_Steganalyse.ipynb  README.md  generate_colab_requirements.ps1  pyproject.toml  requirements.txt  requirements_colab.txt
.devcontainer/: Dockerfile  devcontainer.json
outputs_alaska2/EfficientNetB0_YCbCr_FineTuned/: EfficientNetB0_YCbCr_FineTuned_Run1_block0_history.csv  EfficientNetB0_YCbCr_FineTuned_Run1_block1_history.csv  EfficientNetB0_YCbCr_FineTuned_Run1_block2_history.csv  EfficientNetB0_YCbCr_FineTuned_Run1_block3_history.csv  EfficientNetB0_YCbCr_FineTuned_Run1_block4_history.csv  EfficientNetB0_YCbCr_FineTuned_Run1_block5_history.csv  EfficientNetB0_YCbCr_FineTuned_Run1_block6_history.csv  EfficientNetB0_YCbCr_FineTuned_Run1_block7_history.csv  EfficientNetB0_YCbCr_FineTuned_Run1_block8_history.csv  EfficientNetB0_YCbCr_FineTuned_Run1_head_history.csv
outputs_alaska2/TinyCNN_Y/: TinyCNN_Y_Run10_best.pt  TinyCNN_Y_Run10_history.csv  TinyCNN_Y_Run1_best.pt  TinyCNN_Y_Run1_history.csv
src/eda/: __init__.py  eda_color_channel_statistics.py  eda_dct.py  eda_examples.py  eda_overview.py  eda_statistics.py
src/model/: __init__.py  model_dataset.py  model_evaluate.py  model_metrics.py  model_plot.py  model_train.py
src/util/: __init__.py  util_data.py  util_nb.py
src/util/poetry/: poetry_lint.py
